# selenium_automation_project

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: test.yml
reports/: report.html
src/config/: settings.py
src/pages/: login_page.py  secure_page.py
tests/: conftest.py  test_access_control.py  test_google_title.py  test_invalid_login.py  test_login_real_world.py  test_logout.py  test_secure_area_assertions.py
